<resources>
    <string name="app_name">Instaface</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="settings_button">to Settings -></string>
    <string name="vegetarian">Vegetarian:</string>
    <string name="gluten_free">Gluten Free:</string>
    <string name="vegan">Vegan:</string>
    <string name="search_settings">Search Settings:</string>
    <string name="default_name">Eve Apple</string>
    <string name="default_email">IAteTheApple@example.com</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="user_info">User Info:</string>
    <string name="save_button">Save -></string>
</resources>
