<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:text="@string/user_info"
        android:id="@+id/user_info"
        android:textStyle="bold"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/name_field"
        android:layout_below="@id/user_info">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:id="@+id/name_edit_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/email_field"
        android:layout_below="@id/name_field">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textSize="25sp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email_edit_text"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/search_settings"
        android:textSize="25sp"
        android:layout_below="@id/email_field"
        android:id="@+id/search_settings"
        android:textStyle="bold"
        android:paddingTop="10dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_settings"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/vegan"
            android:textSize="20sp"
            android:id="@+id/vegan_text_view"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:id="@+id/vegan_toggle"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/gluten_free"
            android:textSize="20sp"
            android:layout_below="@id/vegan_text_view"
            android:id="@+id/gluten_free_text_view"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:id="@+id/gluten_free_toggle"
            android:layout_alignTop="@+id/gluten_free_text_view"
            android:layout_alignParentEnd="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/vegetarian"
            android:textSize="20sp"
            android:id="@+id/vegetarian_text_view"
            android:layout_below="@id/gluten_free_text_view"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="15sp"
            android:id="@+id/vegetarian_toggle"
            android:layout_alignTop="@+id/vegetarian_text_view"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/go_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="saveSettings"/>

</RelativeLayout>